# nv-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  test-agent.py
.github/workflows/: ci.yml  pylint.yml  python-app.yml
chat/: app.py  auth.py  rate_limit.py  routes.py
chat/ui/: index.html
kb/: chunker.py
tests/: conftest.py  test_api.py  test_chunker.py  test_config.py  test_embed.py  test_ingest.py  test_rag_agent.py  test_session_store.py
