# ── NV-Agent Project Configuration ──────────────────────────
# Covers: ruff (lint+format), mypy (type checking), pytest

[project]
name = "nv-agent"
version = "1.0.0"
description = "Self-hosted RAG AI Agent powered by NVIDIA NIM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

# ── Ruff — Linting + Formatting ─────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = [".", "kb", "agent", "chat", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (dataclass field())
    "SIM108", # ternary operator (less readable for complex conditions)
]

[tool.ruff.lint.isort]
known-first-party = ["kb", "agent", "chat", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy — Type Checking ────────────────────────────────────
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["faiss.*", "PyPDF2.*", "docx.*"]
ignore_errors = true

# ── pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (no external API calls)",
    "integration: Integration tests (may need NVIDIA API key)",
    "api: FastAPI endpoint tests",
]
